--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Large media files (exceed GitHub's 100MB limit)
+*.mov
+*.mp4
+src/AdobeStock_429519159.mov
