Fix: Add SPA routing rewrite and error boundary for white screen issue

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,12 @@
   "outputDirectory": "build",
   "installCommand": "npm ci",
   "framework": "create-react-app",
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ],
   "headers": [
     {
       "source": "/(.*)",
