Fix invalid rewrite pattern in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
   "framework": "create-react-app",
   "rewrites": [
     {
-      "source": "/((?!static|manifest.json|favicon.ico|logo.*\\.png|.*\\.(ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot)).*)",
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ],
