--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/x-charts": "^8.15.0",
     "@mui/x-data-grid": "^8.15.0",
     "@mui/x-date-pickers": "^8.15.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@supabase/supabase-js": "^2.80.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -26,8 +27,11 @@
     "autoprefixer": "^10.4.21",
     "dompurify": "^3.3.0",
     "dotenv": "^17.2.3",
+    "expo-linear-gradient": "^15.0.7",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.18.0",
     "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1",
     "recharts": "^3.3.0",
